<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView_explain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/fragment_add_schedule_explain"
                    android:textColor="@color/app_blue"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/fragment_add_schedule_date"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView_explain"
                    app:layout_constraintTop_toBottomOf="@+id/textView_explain" />

                <TextView
                    android:id="@+id/textView_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/fragment_add_schedule_time"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView_date"
                    app:layout_constraintTop_toBottomOf="@+id/textView_date" />

                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/fragment_add_schedule_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView_time"
                    app:layout_constraintTop_toBottomOf="@+id/textView_time" />

                <TextView
                    android:id="@+id/textView_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/fragment_add_schedule_friend"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView_title"
                    app:layout_constraintTop_toBottomOf="@+id/textView_title" />

                <TextView
                    android:id="@+id/textView_get_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/get_directions"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView_friend"
                    app:layout_constraintTop_toBottomOf="@+id/textView_friend" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView_save"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_bg"
                android:gravity="center"
                android:text="@string/fragment_add_schedule_save"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>