<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/fragment_check_in_text1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView_app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/app_blue"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView_check_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fragment_check_in_text2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView_kakao_login"
        app:layout_constraintStart_toStartOf="@+id/imageView_kakao_login"
        app:layout_constraintTop_toBottomOf="@+id/imageView_kakao_login" />

    <ImageView
        android:id="@+id/imageView_kakao_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_app_name"
        app:srcCompat="@drawable/kakao_login_medium_wide" />
</androidx.constraintlayout.widget.ConstraintLayout>